[gd_scene load_steps=4 format=3 uid="uid://cb4yxflrc3nyv"]

[ext_resource type="Texture2D" uid="uid://b03o2n8a6q4qg" path="res://assets/Basic assets/Card X3/Card X6.png" id="1_pfpuq"]
[ext_resource type="Script" path="res://Scenes/Scene Container/CrewSizeSelection.gd" id="1_xep0y"]
[ext_resource type="Texture2D" uid="uid://cyda0ceu266ls" path="res://assets/Basic assets/Button 1/005.png" id="3_qlrb4"]

[node name="CrewSizeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xep0y")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pfpuq")

[node name="TutorialLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 450.0
offset_bottom = 100.0
text = "Tutorial text goes here"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -8.0
offset_right = 175.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = 3.0
max_value = 8.0
value = 3.0
rounded = true
tick_count = 6
ticks_on_borders = true

[node name="SliderLabels" type="Control" parent="HSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="3" type="Label" parent="HSlider/SliderLabels"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_right = 40.0
offset_bottom = 31.0
grow_vertical = 0
text = "3"
horizontal_alignment = 1

[node name="8" type="Label" parent="HSlider/SliderLabels"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = 5.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 0
text = "8"
horizontal_alignment = 1

[node name="ConfirmButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_qlrb4")
stretch_mode = 0

[node name="Label" type="Label" parent="ConfirmButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Confirm"
horizontal_alignment = 1
vertical_alignment = 1
